edit phpcs workflow

--- a/.github/workflows/phpcs.yml
+++ b/.github/workflows/phpcs.yml
@@ -1,7 +1,7 @@
 on:
     push:
-        branches:
-            - 'master'
+        paths:
+            - '**.php'
     pull_request:
         paths:
             - '**.php'
