--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,10 @@
       },
       "config": {
         "optimize-autoloader": true,
-        "preferred-install": "dist"
+        "preferred-install": "dist",
+        "allow-plugins": {
+            "cweagans/composer-patches": true
+        }
       },
       "minimum-stability": "dev",
       "prefer-stable": true
