--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 # Framework
-/storage
-*.sqlite
-*.bc.php
-*.cache.php
-*.log.php
-*.session.php
+key.php
+/storage/cache
+/storage/console
+/storage/database
+/storage/logs
+/storage/sessions
+/storage/views
+/storage/*.pem
 
 
 # Phpstorm
@@ -41,7 +43,14 @@ composer.lock
 # Phpunit
 phpunit.phar
 phpunit.xml
+.phpunit.result.cache
 
 # Nodejs
 /node_modules
+npm-debug.log
+yarn-error.log
+.env.backup
 .env
+
+# Others
+*.phar
