--- a/.github/workflows/phpcs.yml
+++ b/.github/workflows/phpcs.yml
@@ -1,44 +1,54 @@
 name: phpcs
-
-on:
-  pull_request:
-    branches:
-      - "master"
-    paths:
-      - '**.php'
- 
-  push:
-    branches:
-      - "master"
-    paths:
-      - '**.php'
-
+'on':
+    - push
+    - pull_request
 jobs:
-    phpcs:
-        runs-on: ubuntu-18.04
+    build:
+        runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v2
-              with:
-                token: ${{ secrets.PAT }}
-                ref: ${{ github.head_ref }}
-
-            - name: check php version
-              run: php -v
-
-            - name: download phpcs
-              run: wget -O phpcs.phar https://cs.symfony.com/download/php-cs-fixer-v2.phar
-
-            - name: make phpcs executable
-              run: chmod +x phpcs.phar
-
-            - name: apply coding style
-              run: php phpcs.phar fix
-
-            - name: remove phpcs
-              run: rm -f phpcs.phar
-
-            - uses: stefanzweifel/git-auto-commit-action@v4
-              with:
-                  ref: ${{ github.head_ref }}
-                  commit_message: 'phpcs: apply coding style'
-                  commit_options: '--no-verify --signoff'
+            -
+                name: checkout
+                uses: actions/checkout@v2
+            -
+                name: setup php
+                uses: shivammathur/setup-php@v2
+                with:
+                    php-version: '7.2'
+                    extensions: 'mbstring, simplexml, dom, openssl, curl, gd'
+            -
+                name: get composer cache directory
+                id: composer-cache
+                run: >-
+                    echo "::set-output name=dir::$(composer config
+                    cache-files-dir)"
+            -
+                name: cache composer dependencies
+                uses: actions/cache@v2
+                with:
+                    path: '${{ steps.composer-cache.outputs.dir }}'
+                    key: >-
+                        ${{ runner.os }}-composer-${{
+                        hashFiles('**/composer.lock') }}
+                    restore-keys: '${{ runner.os }}-composer-'
+            -
+                name: install dependencies
+                run: >-
+                    composer install --no-progress --prefer-dist
+                    --optimize-autoloader
+            -
+                name: check php version
+                run: php -v
+            -
+                name: download phpcs
+                run: >-
+                    wget -O phpcs.phar
+                    https://cs.symfony.com/download/php-cs-fixer-v2.phar
+            -
+                name: make phpcs executable
+                run: chmod +x phpcs.phar
+            -
+                name: apply coding style
+                run: php phpcs.phar fix
+            -
+                name: remove phpcs
+                run: rm -f phpcs.phar
