--- a/.github/workflows/phpcs.yml
+++ b/.github/workflows/phpcs.yml
@@ -8,7 +8,7 @@ jobs:
         steps:
             -
                 name: checkout
-                uses: actions/checkout@v2
+                uses: actions/checkout@v4
             -
                 name: setup php
                 uses: shivammathur/setup-php@v2
@@ -19,22 +19,19 @@ jobs:
                 name: get composer cache directory
                 id: composer-cache
                 run: >-
-                    echo "::set-output name=dir::$(composer config
-                    cache-files-dir)"
+                    echo "::set-output name=dir::$(composer config cache-files-dir)"
             -
                 name: cache composer dependencies
-                uses: actions/cache@v2
+                uses: actions/cache@v4
                 with:
                     path: '${{ steps.composer-cache.outputs.dir }}'
                     key: >-
-                        ${{ runner.os }}-composer-${{
-                        hashFiles('**/composer.lock') }}
+                        ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
                     restore-keys: '${{ runner.os }}-composer-'
             -
                 name: install dependencies
                 run: >-
-                    composer install --no-progress --prefer-dist
-                    --optimize-autoloader
+                    composer install --no-progress --prefer-dist --optimize-autoloader
             -
                 name: check php version
                 run: php -v
