chore: small changes

--- a/.github/workflows/phpcs.yml
+++ b/.github/workflows/phpcs.yml
@@ -1,51 +1,37 @@
+---
 name: phpcs
-'on':
-    - push
-    - pull_request
+on:
+  - push
+  - pull_request
 jobs:
-    build:
-        runs-on: ubuntu-latest
-        steps:
-            -
-                name: checkout
-                uses: actions/checkout@v4
-            -
-                name: setup php
-                uses: shivammathur/setup-php@v2
-                with:
-                    php-version: '7.2'
-                    extensions: 'mbstring, simplexml, dom, openssl, curl, gd'
-            -
-                name: get composer cache directory
-                id: composer-cache
-                run: >-
-                    echo "directory=$(composer config cache-dir)" >> "$GITHUB_OUTPUT"
-            -
-                name: cache composer dependencies
-                uses: actions/cache@v4
-                with:
-                    path: '${{ steps.composer-cache.outputs.directory }}'
-                    key: >-
-                        ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
-                    restore-keys: '${{ runner.os }}-composer-'
-            -
-                name: install dependencies
-                run: >-
-                    composer install --no-progress --prefer-dist --optimize-autoloader
-            -
-                name: check php version
-                run: php -v
-            -
-                name: download phpcs
-                run: >-
-                    wget -O phpcs.phar
-                    https://cs.symfony.com/download/php-cs-fixer-v2.phar
-            -
-                name: make phpcs executable
-                run: chmod +x phpcs.phar
-            -
-                name: apply coding style
-                run: php phpcs.phar fix
-            -
-                name: remove phpcs
-                run: rm -f phpcs.phar
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v4
+      - name: setup php
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: "7.2"
+          extensions: mbstring, simplexml, dom, openssl, curl, gd
+      - name: get composer cache directory
+        id: composer-cache
+        run: echo "directory=$(composer config cache-dir)" >> "$GITHUB_OUTPUT"
+      - name: cache composer dependencies
+        uses: actions/cache@v4
+        with:
+          path: ${{ steps.composer-cache.outputs.directory }}
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+          restore-keys: ${{ runner.os }}-composer-
+      - name: install dependencies
+        run: composer install --no-progress --prefer-dist --optimize-autoloader
+      - name: check php version
+        run: php -v
+      - name: download phpcs
+        run: wget -O phpcs.phar https://cs.symfony.com/download/php-cs-fixer-v2.phar
+      - name: make phpcs executable
+        run: chmod +x phpcs.phar
+      - name: "style: apply coding style"
+        run: php phpcs.phar fix
+      - name: remove phpcs
+        run: rm -f phpcs.phar
