--- a/.editorconfig
+++ b/.editorconfig
@@ -11,5 +11,11 @@ trim_trailing_whitespace = true
 [*.php]
 indent_size = 4
 
+[*.js]
+indent_size = 4
+
+[*.css]
+indent_size = 4
+
 [*.stub]
 indent_size = 4
